# inflow-unified-ai

./: .env.example  .gitignore  COPILOT_USAGE_GUIDE.md  LICENSE  README.md  comprehensive_test.py  demo.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: docs-writer.agent.md  python-package-dev.agent.md  test-writer.agent.md
.github/chatmodes/: Plan.chatmode.md  Review.chatmode.md
.github/instructions/: default.instructions.md
.github/prompts/: add-model.prompt.md  add-provider.prompt.md  release.prompt.md
.github/workflows/: ci-cd.yml
docs/: 01-GETTING-STARTED.md  02-PACKAGE-ARCHITECTURE.md  03-DEVELOPMENT-GUIDE.md  04-CI-CD-PIPELINE.md  05-TESTING-GUIDE.md  06-PUBLISHING-GUIDE.md  07-API-REFERENCE.md  README.md
src/inflow_unified_ai/: __init__.py  client.py
src/inflow_unified_ai/models/: __init__.py  capabilities.py  requests.py  responses.py
src/inflow_unified_ai/prompts/: __init__.py  manager.py
src/inflow_unified_ai/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  factory.py  gemini.py  vllm.py
src/inflow_unified_ai/resilience/: __init__.py  retry.py
tests/: test_package.py
