[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inflow-unified-ai"
version = "0.1.0"
description = "Unified AI Abstraction Layer for seamless integration with Azure OpenAI, Anthropic, Gemini, and vLLM"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "iNextLabs", email = "dev@inextlabs.com" }
]
maintainers = [
    { name = "iNextLabs Team", email = "dev@inextlabs.com" }
]
keywords = [
    "ai", 
    "llm", 
    "openai", 
    "azure-openai", 
    "anthropic", 
    "claude",
    "gemini", 
    "gpt-4", 
    "gpt-5",
    "reasoning-models",
    "abstraction-layer",
    "multi-provider",
    "async",
    "streaming"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "google-generativeai>=0.3",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "httpx>=0.25",
    "structlog>=23.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/iNextLabs/inflow-unified-ai"
Documentation = "https://github.com/iNextLabs/inflow-unified-ai#readme"
Repository = "https://github.com/iNextLabs/inflow-unified-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/inflow_unified_ai"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
